# deepfake-shield

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  processed_structure.txt  pyproject.toml  requirements-api.txt  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
configs/: base.yaml
configs/data/: default.yaml
configs/model/: convnext.yaml
data/: .gitignore
notebooks/: 01_eda.ipynb
scripts/: download_data.py  evaluate.py  export.py  make_test_video.py  organize_data.py  stress_test.py  test_api.py  test_video_api.py  train.py
src/: __init__.py  exceptions.py
src/api/: dependencies.py  main.py  schemas.py
src/data/: __init__.py  datamodule.py  dataset.py  preprocessing.py
src/evaluation/: __init__.py  explainability.py  gradcam.py  metrics.py  robustness.py
src/inference/: predictor.py  video_pipeline.py
src/models/: __init__.py  attention.py  backbone.py  classifier.py
src/training/: __init__.py  callbacks.py  losses.py  trainer.py
src/utils/: __init__.py  config.py  device.py  logging.py
tests/: conftest.py  test_api.py  test_data.py  test_model.py
